@@ -5,6 +5,7 @@ import classNames from 'classnames';
 import { Card, VisuallyHidden } from '@wordpress/components';
 import LoadableSettingsSection from '../loadable-settings-section';
 import AccountActivationNotice from '../account-activation-notice';
+import LegacyExperienceTransitionNotice from '../notices/legacy-experience-transition';
 import SectionHeading from './section-heading';
 import SectionFooter from './section-footer';
 import PaymentMethodsList from './payment-methods-list';
@@ -38,7 +39,7 @@ const GeneralSettingsSection = ( { onSaveChanges } ) => {
 	const [ isChangingDisplayOrder, setIsChangingDisplayOrder ] = useState(
 		false
 	);
-	const { isUpeEnabled } = useContext( UpeToggleContext );
+	const { isUpeEnabled, setIsUpeEnabled } = useContext( UpeToggleContext );
 	const { isRefreshing } = useAccount();
 
 	const onChangeDisplayOrder = ( isChanging, data = null ) => {
@@ -51,6 +52,10 @@ const GeneralSettingsSection = ( { onSaveChanges } ) => {
 
 	return (
 		<>
+			<LegacyExperienceTransitionNotice
+				isUpeEnabled={ isUpeEnabled }
+				setIsUpeEnabled={ setIsUpeEnabled }
+			/>
 			<AccountActivationNotice />
 			<StyledCard>
 				<LoadableSettingsSection numLines={ 30 }>
